--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=microservicio
 
+server.http.port=9000
+server.port=9000
 
 spring.datasource.url=jdbc:mysql://localhost/servicio_microservicio?useSSL=false
 spring.datasource.username=root
