--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.application.name=microservicio
+spring.application.name=SpringBoot_React_Ionic_Microservicio
 
 
 spring.datasource.url=jdbc:mysql://localhost/servicio_microservicio?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
